--- a/index.html
+++ b/index.html
@@ -18,22 +18,55 @@
 <div id="app">
     <div class="header">
         <h1>Vue.js Poster Store</h1>
+        <form class="searchbar" v-on:submit.prevent="search">
+            <input placeholder="search for posters" v-model="term">
+            <input type="submit" value="Search" class="btn">
+        </form>
     </div>
     <div class="main">
         <div class="products">
-            <p>Products go here.</p>
+        
+        <div class="search-results" v-if="this.items.length && this.lastterm">Found {{items.length}} results for search term {{lastterm}}.</div>
+
+        <div class="product" v-for="(item,index) in items">
+            <div>
+                <div class="product-image"><img v-bind:src="item.photo"></div>
+            </div>
+            <div>
+                <h4 class="product-title">{{ item.title }}</h4>
+                <p><b>{{item.price|currency}}</b></p>
+                <button v-on:click="addItem(index)" class="add-to-cart btn">Add to Cart</button>
+            </div>
+        </div>
+        <ul>
+        <!-- <li v-for="item in items">{{ item.title }}</li> -->
+        </ul>
+
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
-            <div>
-                No items in the cart.
+            <ul>
+                <li v-for="item in cart" class="cart-item">
+                    <div class="item-title">{{item.title}}</div>
+                    <span class="item-qty">{{item.qty}} @ {{item.price|currency}}: {{(item.price * item.qty)|currency}}</span>
+                    <button class="btn" v-on:click="inc_cart(item)">+</button>
+                    <button class="btn" v-on:click="dec_cart(item)">-</button>
+                </li>   
+            </ul>
+            <div v-if="this.cart.length">
+                <div>Total: {{total|currency}}</div>
             </div>
+            <div v-else class="empty-cart">
+                <div>Cart is empty?  ;(</div>
+            </div>            
         </div>
     </div>
 </div>
 
 <!-- Scripts -->
 <script src="/reload/reload.js"></script>
+<script src="/node_modules/vue/dist/vue.js"></script>
+<script src="/node_modules/vue-resource/dist/vue-resource.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
