--- a/index.html
+++ b/index.html
@@ -26,22 +26,21 @@
     <div class="main">
         <div class="products">
         
-        <div class="search-results" v-if="results.length && this.lastterm">Found {{results.length}} results for search term {{lastterm}}.</div>
+            <div class="search-results" v-if="results.length && lastterm">Found {{results.length}} results for search term {{lastterm}}.</div>
 
-        <div class="product" v-for="(item,index) in items" v-bind:key="item.id">
-            <div>
-                <div class="product-image"><img v-bind:src="item.photo"></div>
+            <div class="product" v-for="(item,index) in items" v-bind:key="item.id">
+                <div>
+                    <div class="product-image"><img v-bind:src="item.photo"></div>
+                </div>
+                <div>
+                    <h4 class="product-title">{{ item.title }}</h4>
+                    <p><b>{{item.price|currency}}</b></p>
+                    <button v-on:click="addItem(index)" class="add-to-cart btn">Add to Cart</button>
+                </div>
             </div>
-            <div>
-                <h4 class="product-title">{{ item.title }}</h4>
-                <p><b>{{item.price|currency}}</b></p>
-                <button v-on:click="addItem(index)" class="add-to-cart btn">Add to Cart</button>
+            <div ID="product-list-bottom">
+                <div v-if="(results.length === items.length) && (items.length > 0)">No more items.</div>
             </div>
-        </div>
-        <ul>
-        <!-- <li v-for="item in items">{{ item.title }}</li> -->
-        </ul>
-
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
@@ -55,11 +54,11 @@
                 </li>   
             </transition-group>
             <transition name="fade">    
-                <div v-if="this.cart.length">
+                <div v-if="cart.length">
                     <div>Total: {{total|currency}}</div>
                 </div>
             </transition>
-            <div v-if="!this.cart.length" class="empty-cart">
+            <div v-if="!cart.length" class="empty-cart">
                 <div>Cart is empty?  ;(</div>
             </div>      
 
@@ -71,6 +70,7 @@
 <script src="/reload/reload.js"></script>
 <script src="/node_modules/vue/dist/vue.js"></script>
 <script src="/node_modules/vue-resource/dist/vue-resource.js"></script>
+<script src="/node_modules/scrollMonitor/scrollMonitor.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
