--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="public/style.css">
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>  <!-- see v-cloak style in style.css -->
     <div class="header">
         <h1>Vue.js Poster Store</h1>
         <form class="searchbar" v-on:submit.prevent="search">
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div ID="product-list-bottom">
-                <div v-if="(results.length === items.length) && (items.length > 0)">No more items.</div>
+                <div v-if="noMoreItems">No more items.</div>
             </div>
         </div>
         <div class="cart">
